--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Paradigm Shift by HTML5 UP</title>
+		<title>My Personal Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
@@ -21,30 +21,46 @@
 				<!-- Intro -->
 					<section class="intro">
 						<header>
-							<h1>Paradigm Shift</h1>
-							<p>A free responsive site template designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
+							<h1>Hi, I'm Benjamin</h1>
+							<p>A University of Toronto Mississauga Computer Science Student <a href="https://twitter.com/ajlkn">@ajlkn</a> / <a href="https://html5up.net">HTML5 UP</a></p>
 							<ul class="actions">
 								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="images/lebron.jpg" alt="" /></span>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2>Magna sed nullam nisl adipiscing</h2>
+							<h2>My work</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-						</div>
+							<div>
+								<h2> Fitness AI </h2>
+								<a href="https://github.com/ben409049/Personal-Website" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/BI566FvvtDs?si=LZlNQ82Djb6qVHi9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+								<p> For this project I used Gemini API to create a fitness app to teach people to achieve their fitness goals</p>
+							</div>
+							<div>
+								<h2> Project 1 </h2>
+								<a href="https://github.com/ben409049/Personal-Website" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/BI566FvvtDs?si=LZlNQ82Djb6qVHi9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+								<p> For this project I used Gemini API to create a fitness app to teach people to achieve their fitness goals</p>
+							</div>
+							<div>
+								<h2> Project 1 </h2>
+								<a href="https://github.com/ben409049/Personal-Website" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/BI566FvvtDs?si=LZlNQ82Djb6qVHi9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+								<p> For this project I used Gemini API to create a fitness app to teach people to achieve their fitness goals</p>
+							</div>
+							</div>
 					</section>
 
 				<!-- Section -->
-					<section>
+					<!-- <section>
 						<header>
 							<h2>Feugiat consequat tempus ultrices</h2>
 						</header>
@@ -60,18 +76,18 @@
 							</ul>
 							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Section -->
-					<section>
+					<!-- <section>
 						<header>
 							<h2>Ultrices erat magna sed condimentum</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p> -->
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header>
 										<h3>Erat aliquam</h3>
 										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
@@ -84,10 +100,10 @@
 											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
 										</div>
 									</div>
-								</section>
+								</section> -->
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header>
 										<h3>Nisl consequat</h3>
 										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
@@ -99,10 +115,10 @@
 											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
 										</div>
 									</div>
-								</section>
+								</section> -->
 
 							<!-- Section -->
-								<section>
+								<!-- <section>
 									<header>
 										<h3>Lorem gravida</h3>
 										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
@@ -117,10 +133,10 @@
 								</section>
 
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Section -->
-					<section>
+					<!-- <section>
 						<header>
 							<h2>Duis sed adpiscing veroeros amet</h2>
 						</header>
@@ -131,7 +147,7 @@
 								<li><a href="#" class="button large">Learn More</a></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Elements -->
 				<!--
